--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+       <!-- font awesome -->
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous"
+  />
+  <!-- google fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker"
+    rel="stylesheet"
+  />
+    <title>Shopping</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +51,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://sandbox.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID}"></script>
+    
+<script src="https://sandbox.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID&components=buttons}"></script>
+
   </body>
 </html>
