--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     rel="stylesheet"
   />
     <title>Shopping</title>
+
+    <script src="https://www.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID}"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -51,9 +53,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://sandbox.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID}"></script>
+    <!--<script src="https://sandbox.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID}"></script> -->
     
-<script src="https://sandbox.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID&components=buttons}"></script>
+<!--<script src="https://sandbox.paypal.com/sdk/js?client-id={process.env.REACT_APP_PAYPAL_CLIENT_ID&components=buttons}"></script>-->
 
   </body>
 </html>
